Set up semantic html templates

--- a/source/config.yml
+++ b/source/config.yml
@@ -6,5 +6,6 @@ title: Acts of Service
 baseUrl: http://actsofservice.co
 
 params:
+  color: 3A3A42
   author: Carlos Melegrito and Amanda Kusuma
   description: A supper club based in Brunswick East, aiming to connect good people over good food.
